--- a/notebooks/IO_adapters.ipynb
+++ b/notebooks/IO_adapters.ipynb
@@ -28,7 +28,7 @@
         "import numpy as np\n",
         "import unittest"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -59,46 +59,26 @@
         "    input_shape: shape of input image (HxWxC). Image width and height \n",
         "      must be devidible by size. H*W*C must be less than or equal\n",
         "      to size*size*depth.\n",
-        "\n",
         "    size: height and width of the output tensor after space2depth operation. \n",
-        "\n",
         "    depth: number of channels in the output tensor.\n",
-        "\n",
-        "    activation: conv layer activation function\"\"\"\n",
-        "  def _get_parameters():\n",
-        "    # TODO(Dina): Google Python guidelines request that you use space everywhere\n",
-        "    # except for function parameter values (fn(x, y=3) is ok).\n",
-        "    h, w, c = input_shape\n",
-        "    if h % size != 0 or  w % size != 0:\n",
-        "      raise ValueError('input height and width should be'\n",
-        "                       'devisible by output size.')\n",
-        "    num_out_pixels = size * size * depth\n",
-        "    num_in_pixels = h * w * c\n",
-        "    if num_in_pixels >= num_out_pixels:\n",
-        "      raise ValueError(\n",
-        "          'input H*W*C should not be smaller than output H*W*C.')\n",
-        "\n",
-        "    # `block_size` of space2depth\n",
-        "    block_size = min(h / size, w / size)\n",
-        "    if depth % (block_size * block_size) != 0:\n",
-        "      raise ValueError('depth value is not devisible by '\n",
-        "      'the computed block size')   \n",
-        "    # number of 1x1 conv filters \n",
-        "    num_conv_filters = depth / (block_size * block_size)\n",
-        "    return num_conv_filters, block_size\n",
-        "  \n",
-        "  num_filters, block_size = _get_parameters()\n",
+        "    activation: conv layer activation function.\"\"\"\n",
+        "  h, w, c = input_shape\n",
+        "  if h < size or w < size:\n",
+        "    raise ValueError('Input height and width should be greater than `size`.')\n",
+        "  # `block_size` of space2depth\n",
+        "  block_size = min(h / size, w / size)\n",
+        "  if depth % (block_size * block_size) != 0:\n",
+        "    raise ValueError('depth value is not devisible by the computed block size') \n",
         "  \n",
         "  # creating an adapter model\n",
         "  inputs = keras.Input(shape=input_shape)\n",
-        "  # TODO(Dina): It's ok overall, but I would avoid new lines unless necessary.\n",
-        "  # It is ok to split function arguments (one per line) if you really have many.\n",
-        "  x = layers.Conv2D(num_filters, 1, activation=activation)(inputs)\n",
-        "  outputs = tf.nn.space_to_depth(x, block_size)\n",
+        "  s2d = tf.nn.space_to_depth(inputs, block_size)\n",
+        "  outputs = layers.Conv2D(filters=depth,\n",
+        "                          kernel_size=1, activation=activation)(s2d)\n",
         "  model = keras.Model(inputs, outputs, name='in_adapter')\n",
         "  return model"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -123,17 +103,12 @@
         "                        activation='swish', depthwise=True):\n",
         "  \"\"\" Creates an output adapter module that processes tensors before \n",
         "  passing them to fully connected layers.\n",
-        "\n",
         "  Arguments: \n",
         "    input_shape: shape of the input tensor (HxWxC).\n",
-        "\n",
         "    block_size: tensor height and width after average pooling. Default \n",
         "    value is 4.\n",
-        "\n",
         "    pool_stride: stride of average pooling.\n",
-        "    \n",
         "    activation: activation function.\n",
-        "    \n",
         "    depthwise: whether to use depthwise convolution.\"\"\"\n",
         "  if not block_size: \n",
         "    block_size = 4\n",
@@ -166,7 +141,7 @@
         "  model = keras.Model(inputs, outputs, name='out_adapter')\n",
         "  return model"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -174,11 +149,11 @@
       "metadata": {
         "id": "Lwb8x6gtr2ZJ",
         "colab_type": "code",
-        "outputId": "ad1f3aa0-31a7-40e9-c256-3e321e76e1d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "outputId": "c016ed73-228f-4289-d399-ed0f21fd42f2"
       },
       "source": [
         "input_shape = (32, 32, 40)\n",
@@ -186,9 +161,9 @@
         "out_adapter = create_output_adapter(input_shape, block_size=4, \n",
         "                                    depthwise=True)\n",
         "out_tensor = out_adapter(input_tensor)\n",
-        "print(tf.shape(out_tensor))\n"
+        "print(tf.shape(out_tensor))"
       ],
-      "execution_count": 0,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,16 +179,16 @@
       "metadata": {
         "id": "iQkdf0rczCVr",
         "colab_type": "code",
-        "outputId": "623ea31c-de0f-4221-89c8-c65fb9c06f17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
-        }
+        },
+        "outputId": "58422b2c-4fac-4a8a-b815-c6b755c96db3"
       },
       "source": [
         "out_adapter.summary()"
       ],
-      "execution_count": 0,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,17 +197,17 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_35 (InputLayer)        [(None, 32, 32, 40)]      0         \n",
+            "input_9 (InputLayer)         [(None, 32, 32, 40)]      0         \n",
             "_________________________________________________________________\n",
-            "average_pooling2d_2 (Average (None, 4, 4, 40)          0         \n",
+            "average_pooling2d (AveragePo (None, 4, 4, 40)          0         \n",
             "_________________________________________________________________\n",
-            "depthwise_conv2d_1 (Depthwis (None, 4, 4, 40)          80        \n",
+            "depthwise_conv2d (DepthwiseC (None, 4, 4, 40)          80        \n",
             "_________________________________________________________________\n",
-            "flatten_2 (Flatten)          (None, 640)               0         \n",
+            "flatten (Flatten)            (None, 640)               0         \n",
             "_________________________________________________________________\n",
-            "tf_op_layer_ExpandDims_42 (T [(None, 1, 640)]          0         \n",
+            "tf_op_layer_ExpandDims_10 (T [(None, 1, 640)]          0         \n",
             "_________________________________________________________________\n",
-            "tf_op_layer_ExpandDims_43 (T [(None, 1, 1, 640)]       0         \n",
+            "tf_op_layer_ExpandDims_11 (T [(None, 1, 1, 640)]       0         \n",
             "=================================================================\n",
             "Total params: 80\n",
             "Trainable params: 80\n",
@@ -267,7 +242,7 @@
         "    self.default_size = 32\n",
         "    self.default_depth = 64\n",
         "\n",
-        "  # tests if the output of the adaptes is of correct shape\n",
+        "  # tests if the output of the adapter is of correct shape\n",
         "  def test_output_shape(self):\n",
         "    input_shape = (64, 64, 3)\n",
         "    batch_size = 16\n",
@@ -277,8 +252,8 @@
         "    out = adapter(np.zeros((batch_size, *input_shape)))\n",
         "    self.assertShapeEqual(np.zeros(expected_out_shape), out)\n",
         "\n",
-        "  def test_small_out_size(self):\n",
-        "    input_shape = (128, 128, 8)\n",
+        "  def test_small_in_shape(self):\n",
+        "    input_shape = (28, 28, 3)\n",
         "    with self.assertRaises(Exception):\n",
         "      self._create_default_adapter(input_shape)\n",
         "\n",
@@ -289,11 +264,11 @@
         "\n",
         "  def _create_default_adapter(self, input_shape):\n",
         "    adapter = create_input_adapter(input_shape,\n",
-        "                              size=self.default_size,\n",
-        "                              depth=self.default_depth)\n",
-        "    return adapter\n"
+        "                                   size=self.default_size,\n",
+        "                                   depth=self.default_depth)\n",
+        "    return adapter"
       ],
-      "execution_count": 0,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -317,7 +292,7 @@
         "    out_adapter = create_output_adapter(\n",
         "                        input_shape, block_size=block_size)\n",
         "    out = out_adapter(input_tensor)\n",
-        "    expected_num_c = input_shape[2]*block_size*block_size\n",
+        "    expected_num_c = input_shape[2] * block_size * block_size\n",
         "    expected_out_shape = (batch, 1, 1, expected_num_c)\n",
         "    self.assertAllEqual(expected_out_shape, out.shape)\n",
         "\n",
@@ -325,7 +300,7 @@
         "    input_shape = (32, 32, 40)\n",
         "    with self.assertRaises(ValueError):\n",
         "      out_adapter = create_output_adapter(\n",
-        "                        input_shape, block_size=3.5)\n",
+        "                        input_shape, block_size= 3.5)\n",
         "  \n",
         "  def test_bad_pool_stride(self):\n",
         "    input_shape = (32, 32, 40)\n",
@@ -337,9 +312,9 @@
         "    input_shape = (32, 32)\n",
         "    with self.assertRaises(ValueError):\n",
         "      out_adapter = create_output_adapter(\n",
-        "                        input_shape, block_size=4)"
+        "                        input_shape, block_size= 4)"
       ],
-      "execution_count": 0,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -347,24 +322,24 @@
       "metadata": {
         "id": "MGwT0RvYManE",
         "colab_type": "code",
-        "outputId": "da5ec026-b547-4a51-8c86-8b9c3822130e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        }
+        },
+        "outputId": "44c12918-21f0-459a-9c96-27e77e4e4731"
       },
       "source": [
         "if __name__ == '__main__':\n",
         "    unittest.main(argv=['first-arg-is-ignored'], exit=False)"
       ],
-      "execution_count": 0,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "..s.....s\n",
             "----------------------------------------------------------------------\n",
-            "Ran 9 tests in 0.132s\n",
+            "Ran 9 tests in 0.156s\n",
             "\n",
             "OK (skipped=2)\n"
           ],
@@ -382,7 +357,7 @@
       "source": [
         ""
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     }
   ]
